--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,6 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Noto+Serif+JP:200&display=swap&subset=japanese);
 @import url(https://fonts.googleapis.com/css?family=Averia+Serif+Libre|Kristi&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Montserrat+Subrayada|Ramabhadra|Tauri&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:300,400);
 /*
 font-family: 'Ramabhadra', sans-serif;太文字見出し
 font-family: 'Montserrat Subrayada', sans-serif;装飾文字
@@ -16,6 +17,9 @@ body {
     display: block;
 }
 
+a {
+    text-decoration: none ;
+    }
 //動画の全画面表示
 .fitMovie {
     position: absolute;
@@ -64,6 +68,101 @@ body {
 
 //動画の斜めエフェクトここまで
 
+//scroll downボタンここから
+.demo {
+    position: absolute;
+    top: 900px;
+    left: 49%;
+    z-index: 50;
+}
+.demo section::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 80%;
+  background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
+  background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
+}
+.demo a {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  color: #fff;
+  font : normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+}
+.demo a:hover {
+  opacity: .5;
+}
+
+#section07 a {
+  padding-top: 80px;
+}
+#section07 a span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 24px;
+  height: 24px;
+  margin-left: -12px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb07 2s infinite;
+  animation: sdb07 2s infinite;
+  opacity: 0;
+  box-sizing: border-box;
+}
+#section07 a span:nth-of-type(1) {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+}
+#section07 a span:nth-of-type(2) {
+  top: 16px;
+  -webkit-animation-delay: .15s;
+  animation-delay: .15s;
+}
+#section07 a span:nth-of-type(3) {
+  top: 32px;
+  -webkit-animation-delay: .3s;
+  animation-delay: .3s;
+}
+@-webkit-keyframes sdb07 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes sdb07 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
+
+//scroll downボタンここまで
+
 //ヘッダーメニューここから
 nav {
     position: fixed;
@@ -77,7 +176,7 @@ nav {
     z-index: 10;
     font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-    z-index: 20;
+    z-index: 50;
 }
 
 section#nav-test {
@@ -253,14 +352,13 @@ section#nav-test {
 .naname_right1:after {
     content: "";
     position: absolute;
-    background-color: rgba(#fff, .7);
-    /* 白 */
+    background-color: #fff;/* 白 */
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 2;
-    opacity: .8;
+    opacity: .7;
 }
 
 .naname_left2 {
@@ -308,17 +406,25 @@ section#nav-test {
 
 //コンテンツここから
 
+.container {
+    position: absolute;
+    width: 80%;
+    background-color: rgba(orange,.5);
+    margin-left: 250px;
+    z-index: 30;
+}
+
 section.contents_left {
     position: absolute;
-    top: 800px;
-    left: 50px;
+    top: 0;
+    left: -130px;
     width: 400px;
     z-index: 30;
 
     article {
         text-align: justify;
         text-justify: auto;
-
+    }
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
             font-size: 3rem;
@@ -328,18 +434,79 @@ section.contents_left {
         p {
             margin: 10px 0 0 0;
         }
+}
+
+section.contents_right {
+    position: absolute;
+    top: 150px;
+    right: 5%;
+    width: 500px;
+    z-index: 30;
+
+    article {
+        text-align: justify;
+        text-justify: auto;
     }
+        h2 {
+            font-family: 'Montserrat Subrayada', sans-serif;
+            font-size: 3rem;
+            margin: 50px 0 0 0;
+        }
+
+        p {
+            margin: 10px 0 0 0;
+            letter-spacing: 2rem;
+            line-height: 2rem;
+        }
 }
 
-//aboutusここまで
 
-//aboutusここから
-article.aboutus {
-    right: 50px;
-    font-family: 'Roboto', sans-serif;
+section.contents_left2 {
+    position: absolute;
+    top: 600px;
+    left: -130px;
+    width: 400px;
+    z-index: 30;
+
+    article {
+        text-align: justify;
+        text-justify: auto;
+    }
+        h2 {
+            font-family: 'Montserrat Subrayada', sans-serif;
+            font-size: 3rem;
+            margin: 50px 0 0 0;
+        }
+
+        p {
+            margin: 10px 0 0 0;
+        }
 }
 
 
+section.contents_right2 {
+    position: absolute;
+    top: 550px;
+    right: 5%;
+    width: 500px;
+    z-index: 30;
+
+    article {
+        text-align: justify;
+        text-justify: auto;
+    }
+        h2 {
+            font-family: 'Montserrat Subrayada', sans-serif;
+            font-size: 3rem;
+            margin: 50px 0 0 0;
+        }
+
+        p {
+            margin: 10px 0 0 0;
+            letter-spacing: 2rem;
+            line-height: 2rem;
+        }
+}
 ////mainコンテンツここまで
 
 //footerここから
