--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -236,23 +236,27 @@ section#nav-test {
 .title_text_box {
     /* 日本語 */
     position: absolute;
-    width: 600px;
+    width: 700px;
     margin: 0 auto;
     padding: 10px 10px 10px 55px;
     top: 250px;
     left: 0%;
     border-top: 1px solid rgba(#fff, .5);
     border-bottom: 1px solid rgba(#fff, .5);
-    font-size: 3rem;
+  background: -moz-linear-gradient(left, rgba(#fff,.2), transparent);
+  background: -webkit-linear-gradient(left, rgba(#fff,.2), transparent);
+  background: linear-gradient(to right, rgba(#fff,.2), transparent);
+    font-size: 2rem;
     font-family: 'Noto Serif JP', serif;
     line-height: 1.8;
     text-align: right;
+    font-weight: 100;
     text-shadow: 2px 1px 4px #000000;
     z-index: 10;
     letter-spacing: 1.5rem;
 
     p {
-        margin: 15px 0 150px 0;
+        margin: 15px 0 50px 0;
     }
 }
 
@@ -262,16 +266,16 @@ section#nav-test {
     width: 600px;
     margin: 0 auto;
     padding: 10px 0px 10px 55px;
-    top: 450px;
+    top: 260px;
     left: 0%;
     font-family: 'Averia Serif Libre', cursive;
     text-align: right;
     margin: 80px 0px 0 0;
-    color: rgba(#fff, .9);
+    color: rgba(#fff, 1);
     z-index: 10;
 
     span.be_a_driver {
-        font-size: 1.2rem;
+        font-size: 1rem;
         letter-spacing: 1px;
         padding-right: 60px;
     }
@@ -316,7 +320,7 @@ section#nav-test {
     width: 3500px;
     height: 2000px;
     left: -500px;
-    background: url(../images/news.jpg) top left no-repeat;
+    background: url(../images/new02.jpg) top left no-repeat;
     top: 1200px;
     transform: rotate(18deg) scale(1);
     z-index: 10;
@@ -325,7 +329,7 @@ section#nav-test {
 .naname_left1:after {
     content: "";
     position: absolute;
-    background-color: rgba(#db143c, .7);
+    background-color: rgba(#db143c, .8);
     /* 赤 */
     top: 0;
     bottom: 0;
@@ -341,7 +345,7 @@ section#nav-test {
     width: 3500px;
     height: 1500px;
     right: -500px;
-    background: url(../images/aboutus.jpg) top center no-repeat;
+    background: url(../images/company.jpg) top center no-repeat;
     background-size: cover;
     /* 白 */
     top: 1200px;
@@ -367,11 +371,23 @@ section#nav-test {
     width: 3500px;
     height: 2000px;
     left: -500px;
-    background-color: #111111;
-    /* 黒 */
+    background: url(../images/aboutus.jpg) bottom center no-repeat;
+    background-size: cover;
     top: 1830px;
     transform: rotate(18deg) scale(1);
     z-index: 12;
+}
+.naname_left2:after {
+    content: "";
+    position: absolute;
+    background-color: #1f1f1f;
+    /* 黒 */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    opacity: .8;
 }
 
 .naname_right2 {
@@ -409,7 +425,6 @@ section#nav-test {
 .container {
     position: absolute;
     width: 80%;
-    background-color: rgba(orange,.5);
     margin-left: 250px;
     z-index: 30;
 }
@@ -427,21 +442,29 @@ section.contents_left {
     }
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
-            font-size: 3rem;
+            font-size: 4rem;
             margin: 50px 0 0 0;
         }
 
         p {
-            margin: 10px 0 0 0;
+            margin: 20px 0 0 0;
         }
 }
+@media screen and (max-width: 850px){
+section.contents_left {
+    color: #1f1f1f;
+    }
+}
+
+
 
 section.contents_right {
     position: absolute;
-    top: 150px;
+    top: 180px;
     right: 5%;
     width: 500px;
     z-index: 30;
+    color: #1f1f1f;
 
     article {
         text-align: justify;
@@ -449,21 +472,27 @@ section.contents_right {
     }
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
-            font-size: 3rem;
+            font-size: 4rem;
             margin: 50px 0 0 0;
         }
 
         p {
             margin: 10px 0 0 0;
-            letter-spacing: 2rem;
             line-height: 2rem;
         }
 }
+@media screen and (max-width: 850px){
+section.contents_right article p:last-of-type {
+    background-color: rgba(#fff,.5);
+    padding: 20px;
+    }
+}
+
 
 
 section.contents_left2 {
     position: absolute;
-    top: 600px;
+    top: 850px;
     left: -130px;
     width: 400px;
     z-index: 30;
@@ -474,27 +503,33 @@ section.contents_left2 {
     }
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
-            font-size: 3rem;
+            font-size: 4rem;
             margin: 50px 0 0 0;
         }
 
         p {
-            margin: 10px 0 0 0;
+            margin: 20px 0 0 0;
+            font-size: .8rem;
         }
 }
+@media screen and (max-width: 850px){
+section.contents_left2 {
+    top: 950px;
+    }
+}
+
 
 
 section.contents_right2 {
     position: absolute;
-    top: 550px;
+    top: 650px;
     right: 5%;
     width: 500px;
     z-index: 30;
 
-    article {
-        text-align: justify;
-        text-justify: auto;
-    }
+    .aboutus {
+/*         text-align: justify;
+text-justify: auto; */
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
             font-size: 3rem;
@@ -502,16 +537,17 @@ section.contents_right2 {
         }
 
         p {
-            margin: 10px 0 0 0;
-            letter-spacing: 2rem;
-            line-height: 2rem;
+            margin: 20px 0 0 0;
+line-height: 2rem;
         }
+}
 }
 ////mainコンテンツここまで
 
 //footerここから
 footer {
     position: absolute;
+    display: block;
     left: 0;
     right: 0;
     top: 4000px;
@@ -520,6 +556,8 @@ footer {
     z-index: 16;
     background-color: rgba(#1f1f1f, 1);
     background: linear-gradient(to top, #000, #323639);
+    text-align: center;
+    vertical-align: bottom;
 }
 
 //footerここまで
