--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -31,8 +31,28 @@ body {
 }
 
 a {
-    text-decoration: none ;
-    }
+    text-decoration: none;
+}
+.cp_link {
+    padding: 0.1em 0.3em;
+    position: relative;
+    display: inline-block;
+    transition: .3s;
+    color: #db143c;
+}
+.cp_link::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: '';
+    width: 0;
+    height: 1px;
+    background-color: #fff;
+    transition: .3s;
+}
+.cp_link:hover::after {
+    width: 100%;
+}
 //動画の全画面表示
 .fitMovie {
     position: absolute;
@@ -244,6 +264,7 @@ section#nav-test {
     }
 }
 
+
 //ヘッダーメニューここまで
 
 //キャッチコピーここから
@@ -284,8 +305,8 @@ text-shadow:0px 0px 5px rgba(#ababab,.5);
     position: absolute;
     display: block;
     width: 100vw;
-    height: 1000px;
-    background-color: #db143c;
+    height: 1200px;
+    background-color: #323639;
     top: 3310px;
     box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.6);
     -webkit-box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.6);
@@ -378,11 +399,22 @@ text-shadow:0px 0px 5px rgba(#ababab,.5);
     width: 3500px;
     height: 1500px;
     right: -500px;
-    background-color: #173080;
-    /* 青 */
+    background: url(../images/map.jpg) bottom center no-repeat;
+    background-size: cover;
     top: 2450px;
     transform: rotate(-18deg) scale(1);
     z-index: 15;
+}
+.naname_right2:after {
+    content: "";
+    position: absolute;
+    background-color: #176580;/* 青 */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    opacity: .8;
 }
 
 .naname_left3 {
@@ -391,14 +423,25 @@ text-shadow:0px 0px 5px rgba(#ababab,.5);
     width: 3000px;
     height: 700px;
     left: -500px;
-    background-color: rgba(#db143c, 1);
+    background: url(../images/contact.jpg) bottom center no-repeat;
+    background-size: cover;
     /* 赤 */
     top: 3040px;
     transform: rotate(18deg) scale(1);
     z-index: 16;
 }
 
-
+.naname_left3:after {
+    content: "";
+    position: absolute;
+    background-color: #db143c;/* 赤 */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    opacity: .7;
+}
 
 //斜めここまで
 
@@ -536,45 +579,83 @@ section.contents_left2 {//company
 }
 
 
-section.contents_right2 {//service
+section.contents_right2 {//ACCESS
     position: absolute;
-    top: 650px;
+    top: 1050px;
     right: 5%;
     width: 500px;
     z-index: 30;
 
-    .aboutus {
-/*         text-align: justify;
-text-justify: auto; */
         h2 {
             font-family: 'Montserrat Subrayada', sans-serif;
-            font-size: 3rem;
+            font-size: 4rem;
             margin: 50px 0 0 0;
         }
 
         p {
             margin: 20px 0 0 0;
-line-height: 2rem;
+        line-height: 2rem;
         }
 }
-}
 
-@media screen and (max-width: 1024px){//service
+
+@media screen and (max-width: 1024px){//ACCESS
     section.contents_right2 {
     width: 300px;
-    top: 550px;
+    top: 1600px;
     right: 217px;
     background-color: rgba(#fff,.5);
     padding: 20px;
     box-shadow:0px 0px 13px -4px #dbdbdb;
+    color: #1f1f1f;
     font-size: .8rem;
-    h2 {
-        margin-top: 0px;
-        text-align: center;
-    }
+        h2 {
+            margin: 0px;
+            font-size: 3rem;
+            text-align: center;
+        }
     }
 }
 
+section.contents_left3 {//contact
+    position: absolute;
+    top: 1770px;
+    left: -130px;
+    width: 400px;
+    z-index: 30;
+
+    article {
+        text-align: justify;
+        text-justify: auto;
+    }
+        h2 {
+            font-family: 'Montserrat Subrayada', sans-serif;
+            font-size: 4rem;
+            margin: 0;
+        }
+
+        p {
+            margin: 15px 0 10px 0;
+            font-size: .8rem;
+        }
+}
+@media screen and (max-width: 1024px){//contact
+    section.contents_left3 {
+    width: 330px;
+        top: 2670px;
+        left: -172px;
+        background-color: rgba(#fff,.5);
+        padding: 20px 0 20px 10px;
+        box-shadow:0px 0px 13px -4px #dbdbdb;
+        font-size: .8rem;
+        color: #1f1f1f;
+        h2 {
+            margin-top: 0px;
+                font-size: 3rem;
+                text-align: center;
+        }
+    }
+}
 
 //company lineここから
 $container-shadow: 0.5rem 0.5rem 2rem 0 rgba(black, 0.2);
@@ -699,6 +780,188 @@ $dot-diameter: 8px;
 }
 //company lineここまで
 
+//accessここから
+article.access{
+    p {
+        margin: 0;
+        padding: 0;
+    }
+    ul {
+      list-style-type: none;
+      }
+      li {
+      }
+}
+//accessここまで
+
+//contactここから
+
+// Color vars
+
+$white: rgba(#fff,.3);
+$grey: #ccc;
+$dark_grey: #555;
+$blue: #1f1f1f;
+$pink: #ee9cb4;
+
+// Functions
+
+@function pxtoem($target, $context){
+  @return ($target/$context)+0em;
+}
+
+//
+
+.container_contact {
+  max-width: 400px;
+  min-width: 400px;
+  margin: 0px auto 0px;
+  background-color: $white;
+        .row {
+          width: 75%;
+          margin: 0 0 1em 0;
+          padding: 0 2.5em;
+          &.header {
+            padding: 1.5em 2.5em;
+            border-bottom: 1px solid $grey;
+            background: url(https://images2.imgbox.com/a5/2e/m3lRbCCA_o.jpg) left -80px;
+            color: $white;
+          }
+          &.body {
+            padding: .5em 2.5em 1em;
+          }
+        }
+        .pull-right {
+          float: right;
+        }
+        h1 {
+          @include lato-book;
+          display: inline-block;
+          font-weight: 100;
+          font-size: pxtoem(45, 16);
+          border-bottom: 1px solid hsla(100%, 100%, 100%, 0.3);
+          margin: 0 0 0.1em 0;
+          padding: 0 0 0.4em 0;
+        }
+        h3 {
+          @include lato-reg;
+          font-size: pxtoem(20, 16);
+          margin: 1em 0 0.4em 0;
+        }
+        .btn {
+          font-size: pxtoem(17, 16);
+          display: inline-block;
+          padding: 0.74em 1.5em;
+          margin: 1.5em 0 0;
+          color: $white;
+          border-width: 0 0 0 0;
+          border-bottom: 5px solid;
+          text-transform: uppercase;
+          @include btn(darken($grey, 10%));
+          @include lato-book;
+          &.btn-submit {
+            @include btn($blue);
+          }
+        }
+
+}
+        form {
+          max-width: 100%;
+          display: block;
+          ul {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            li {
+              margin: 0 0 0.25em 0;
+              clear: both;
+              display: inline-block;
+              width: 100%;
+              &:last-child {
+                  margin: 0;
+                }
+                p {
+                  margin: 0;
+                  padding: 0;
+                  float: left;
+                  &.right {
+                    float: right;
+                  }
+                }
+                .divider {
+                  margin: 0.5em 0 0.5em 0;
+                  border: 0;
+                  height: 1px;
+                  width: 100%;
+                  display: block;
+                  background-color: $blue;
+                  background-image: linear-gradient(to right, $pink, $blue);
+                }
+                .req {
+                  color: $pink;
+                }
+            }
+          }
+          label {
+            display: block;
+            margin: 0 0 0.5em 0;
+            color: $blue;
+            font-size: pxtoem(16, 16);
+          }
+          input {
+            margin: 0 0 0.5em 0;
+            border: 1px solid $grey;
+            padding: 6px 10px;
+            color: $dark_grey;
+            font-size: pxtoem(16, 16);
+          }
+          textarea {
+            border: 1px solid $grey;
+            padding: 6px 10px;
+            width: 100%;
+            color: $dark_grey;
+          }
+          small {
+            color: $blue;
+            margin: 0 0 0 0.5em;
+          }
+        }
+
+// Media Queries
+
+@media only screen and (max-width:480px) {
+.container_contact,.row {
+background-color: rgba(#fff,0);
+}
+  .pull-right {
+    float: none;
+  }
+  input {
+    width: 100%;
+  }
+  label {
+    width: 100%;
+    display: inline-block;
+    float: left;
+    clear: both;
+  }
+  li, p {
+   width: 100%;
+  }
+  input.btn {
+   margin: 1.5em 0 0.5em;
+  }
+  h1 {
+   font-size: pxtoem(36, 16);
+  }
+  h3 {
+    font-size: pxtoem(18, 16)
+  }
+  li small {
+   display: none;
+  }
+}
+//contactここまで
 
 
 ////mainコンテンツここまで
@@ -709,14 +972,69 @@ footer {
     display: block;
     left: 0;
     right: 0;
-    top: 4000px;
+    top: 4020px;
     bottom: 0;
     height: 500px;
+    width: 100vw;
     z-index: 16;
     background-color: rgba(#1f1f1f, 1);
     background: linear-gradient(to top, #000, #323639);
     text-align: center;
     vertical-align: bottom;
+    // overflow-x: hidden;
 }
+
+.footer {
+    position: relative;
+    top: 50px;
+    width: 100vw;
+    height: 60px;
+    background-color: #1f1f1f;
+    line-height: 3.5rem;
+}
+
+section.movie {
+    position: absolute;
+    display: flex;
+    bottom: 0;
+    width: 100vw;
+    background: url(../images/footer.jpg) top center no-repeat;
+    background-size: cover;
+    height: 400px;
+    overflow: hidden;
+
+    div.center {
+        margin: 0 auto;
+        z-index: 40;
+    }
+    div {
+        float: left;
+        font-size: .8rem;
+        color: rgba(#fff,.7);
+        line-height: 2rem;
+        margin: 50px 30px 20px 30px;
+        height: 400px;
+    }
+}
+section.movie:after {
+    content: "";
+    position: absolute;
+    background-color: #1f1f1f;
+    /* 黒 */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    opacity: .7;
+}
+
+
+@media screen and (max-width: 1024px){
+footer {
+    top: 4500px;
+}
+}
+
 
 //footerここまで
